즐겨찾기 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=sbb-shopapi
 # 데이터베이스 설정
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database
-spring.datasource.username=your_username
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:mysql://localhost:3312/sbbdb
+spring.datasource.username=root
+spring.datasource.password=mypw123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MyBatis 설정
