--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=sbb-shopapi
+# DataSource ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3312/sbbdb
+spring.datasource.username=root
+spring.datasource.password=mypw123
+
+# MyBatis ??
+mybatis.mapper-locations=classpath:mappers/**/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
